@@ -75,7 +75,7 @@ requires        'MLDBM'                  => 0;
 requires        'MLDBM::Sync'            => 0;
 requires        'MLDBM::Sync::SDBM_File' => 0;
 requires        'Net::Telnet'            => 0;
-requires        'Term::Menus'            => 0;
+requires        'Term::Menus'            => 1.24;
 requires        'Tie::Cache'             => 0;
 requires        'URI'                    => 0;
 recommends      'Crypt::Rijndael'        => 0;
