@@ -33,7 +33,7 @@ package Net::FullAuto;
 #
 ################################################################
 
-our $VERSION='0.03';
+our $VERSION='0.04';
 use 5.002;
 
 BEGIN {
