@@ -24,6 +24,15 @@
 #
 ################################################################
 
+2007-09-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.04 released.
+
+        * Added '&' before threads-> method call in usr_code.pm
+
+        * Changed Makefile.PL to require at least
+          version 1.24 version of Term::Menus.
+
 2007-09-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.03 released.
